prodgress test protocol
